[package]
name = "superstruct"
version = "0.7.0"
edition = "2021"
description = "Versioned data types with minimal boilerplate"
license = "Apache-2.0"
repository = "https://github.com/sigp/superstruct"
documentation = "https://sigp.github.io/superstruct/"
keywords = ["schema", "subtype", "compatibility", "macro"]
categories = ["rust-patterns"]

[lib]
name = "superstruct"
proc-macro = true

[dependencies]
darling = "0.13.0"
itertools = "0.10.1"
proc-macro2 = "1.0.32"
quote = "1.0.10"
syn = "1.0.82"
smallvec = "1.8.0"
serde = { version = "1.0.130", features = ["derive"] }
serde_json = "1.0.72"
macro_state = "0.2.0"
