[package]
name = "superstruct"
version = "0.9.0"
edition = "2021"
description = "Versioned data types with minimal boilerplate"
license = "Apache-2.0"
repository = "https://github.com/sigp/superstruct"
documentation = "https://sigp.github.io/superstruct/"
keywords = ["schema", "subtype", "compatibility", "macro"]
categories = ["rust-patterns"]

[lib]
name = "superstruct"
proc-macro = true

[dependencies]
darling = "0.20.10"
itertools = "0.13.0"
proc-macro2 = "1.0.89"
quote = "1.0.37"
syn = "2.0.86"
smallvec = "1.13.2"

[dev-dependencies]
serde = { version = "1.0.130", features = ["derive"] }
serde_json = "1.0.72"
