[package]
name = "superstruct"
version = "0.10.0"
edition = "2021"
description = "Versioned data types with minimal boilerplate"
license = "Apache-2.0"
repository = "https://github.com/sigp/superstruct"
documentation = "https://sigp.github.io/superstruct/"
keywords = ["schema", "subtype", "compatibility", "macro"]
categories = ["rust-patterns"]

[lib]
name = "superstruct"
proc-macro = true

[dependencies]
darling = "0.23"
itertools = "0.14"
proc-macro2 = "1"
quote = "1"
syn = "2"
smallvec = "1"

[dev-dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
